Save confirmation stops showing #31064

Closed
opened 2012-04-22 21:09:49 +02:00 by j d · 5 comments

%%%Win7 64bit
2.63 rc1 from blender.org (as well as other older versions from graphicall)

open default scene --> save a new .blend ---> ctrl + s to see the confirm dialog ---> make a change -> go FILE > Save

now make another change --> Ctrl +s and it saves auto with no confirm.

This is different behavior to previous versions of blender. Not really a show stopper or anything, just a bit unnerving.%%%

%%%Win7 64bit 2.63 rc1 from blender.org (as well as other older versions from graphicall) open default scene --> save a new .blend ---> ctrl + s to see the confirm dialog ---> make a change -> go FILE > Save now make another change --> Ctrl +s and it saves auto with no confirm. This is different behavior to previous versions of blender. Not really a show stopper or anything, just a bit unnerving.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Same on 2.63 rc1 32bit.

can check 2.62 for proper behavior%%%

%%%Same on 2.63 rc1 32bit. can check 2.62 for proper behavior%%%

%%%If anything, it is that first confirmation that probably should not show. If you have a file saved (i.e., assigned it a name), you make a change then hit "Save" expected behavior in almost all file-based applications is to simply save. The only time you should get the confirmation you mention is if you have chosen to overwrite an existing file whose path/name does not match the one currently loaded in the UI. Going to go back through docs around this feature to better understand the expected behavior.%%%

%%%If anything, it is that first confirmation that probably should not show. If you have a file saved (i.e., assigned it a name), you make a change then hit "Save" expected behavior in almost all file-based applications is to simply save. The only time you should get the confirmation you mention is if you have chosen to overwrite an existing file whose path/name does not match the one currently loaded in the UI. Going to go back through docs around this feature to better understand the expected behavior.%%%

%%%fixed r45870.%%%

%%%fixed r45870.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31064
No description provided.