fix [#31064] Save confirmation stops showing

also comment unused functions.